--- a/PhoneBook-Web/src/app/entry/entry.component.html
+++ b/PhoneBook-Web/src/app/entry/entry.component.html
@@ -8,12 +8,16 @@
                 <div class="col-sm-6">
 
                     <input type="text" class="form-control" formControlName="Name" placeholder="Enter new Entry" />
+                    <span *ngIf="myForm.controls['Name'].invalid" class="red-text">Name is required.</span>
+                    <br />
                     <input type="text" class="form-control" formControlName="PhoneNumber" placeholder="Enter new number" />
+                    <span *ngIf="myForm.controls['PhoneNumber'].invalid" class="red-text">Phone Number is required.</span>
+             
                     <br />
                 </div>
             </div>
             <button class='btn btn-default card-link' type="reset">Reset</button>
-            <button class='btn btn-success card-link' type="submit">Save</button>
+            <button [disabled]="myForm.pristine || myForm.invalid" class='btn btn-success card-link' type="submit">Save</button>
         </form>
     </div>
 </div>
